--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,36 @@
 aniso8601==9.0.1
+attrs==21.2.0
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
+dnspython==2.1.0
+email-validator==1.1.2
 Flask==1.1.2
 Flask-JWT-Extended==4.1.0
+Flask-MySQLdb==0.2.0
 Flask-RESTful==0.3.8
+Flask-WTF==0.14.3
 greenlet==1.0.0
 idna==2.10
+iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 mysqlclient==2.0.3
+packaging==20.9
+pluggy==0.13.1
+py==1.10.0
 pyfcm==1.5.1
 PyJWT==2.0.1
+pyparsing==2.4.7
+pytest==6.2.4
 pytz==2021.1
 redis==3.5.3
 requests==2.25.1
+schematics==2.1.0
 six==1.15.0
 SQLAlchemy==1.4.0
+toml==0.10.2
 urllib3==1.26.4
 Werkzeug==1.0.1
+WTForms==2.3.3
